--- a/love.html
+++ b/love.html
@@ -657,7 +657,7 @@ var ParticlePool = (function() {
 
         margin-bottom: 5px;
 
-        text-align: center;">Pé Heo</div>
+        text-align: center;"></div>
 
  </BODY>
 
